--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
   google_sign_in: ^5.0.5
+  pay: ^1.0.5
   simple_animations: ^3.1.1
 
   # The following adds the Cupertino Icons font to your application.
